--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <button type="submit">Get info</button>
   </form>
 
+  <h1 id="duration"></h1>
+
   <script>
     // IPC (require from CommonJS)
     const electron = require('electron');
@@ -16,6 +18,10 @@
       event.preventDefault();
       const { path } = document.querySelector('input').files[0];
       ipcRenderer.send('video:submit', path);
+    });
+
+    ipcRenderer.on('video:metadata', (event, duration) => {
+      document.querySelector('#duration').innerHTML = `Video is ${duration} seconds`;
     });
   </script>
 </body>
